--- a/etl/recipes/pop_by_age_country_year.yml
+++ b/etl/recipes/pop_by_age_country_year.yml
@@ -106,6 +106,7 @@ cooking:
           ingredients:
               - *final
           options:
+              sub_folder: ddf--datapoints--population--by--country--age--year
               split_datapoints_by:
                   - country
 
