--- a/etl/recipes/pop_by_global_year.yml
+++ b/etl/recipes/pop_by_global_year.yml
@@ -65,11 +65,11 @@ cooking:
                   population: population * 1000
           result: unpop-datapoints-pop-by-global-age-gender-thousands
 
-        - procedure: filter_row
+        - procedure: filter
           ingredients:
               - unpop-datapoints-pop-by-global-thousands
           options:
-              filters:
+              row:
                   population:
                       variant: estimates
           result: unpop-datapoints-pop-by-global-thousands-before-2016
@@ -85,11 +85,11 @@ cooking:
                   population: sum
           result: unpop-datapoints-pop-by-global-thousands-before-2016-novar
 
-        - procedure: filter_row
+        - procedure: filter
           ingredients:
               - unpop-datapoints-pop-by-global-thousands
           options:
-              filters:
+              row:
                   population:
                       variant: medium_variant
           result: unpop-datapoints-pop-by-global-thousands-2015-and-after
@@ -167,11 +167,11 @@ cooking:
               dictionary:
                   age1yearinterval: age
           result: unpop-datapoints-pop-by-global-age-thousands-translated
-        - procedure: filter_row
+        - procedure: filter
           ingredients:
               - unpop-datapoints-pop-by-global-age-thousands-translated
           options:
-              filters:
+              row:
                   population:
                       variant: estimates
           result: unpop-datapoints-pop-by-global-age-thousands-before-2016
@@ -188,11 +188,11 @@ cooking:
                   population: sum
           result: unpop-datapoints-pop-by-global-age-thousands-before-2016-novar
 
-        - procedure: filter_row
+        - procedure: filter
           ingredients:
               - unpop-datapoints-pop-by-global-age-thousands-translated
           options:
-              filters:
+              row:
                   population:
                       variant: medium_variant
           result: unpop-datapoints-pop-by-global-age-thousands-2015-and-after
@@ -236,11 +236,11 @@ cooking:
               dictionary:
                   age1yearinterval: age
           result: unpop-datapoints-pop-by-global-age-gender-thousands-translated
-        - procedure: filter_row
+        - procedure: filter
           ingredients:
               - unpop-datapoints-pop-by-global-age-gender-thousands-translated
           options:
-              filters:
+              row:
                   population:
                       variant: estimates
           result: unpop-datapoints-pop-by-global-age-gender-thousands-before-2016
@@ -258,11 +258,11 @@ cooking:
                   population: sum
           result: unpop-datapoints-pop-by-global-age-gender-thousands-before-2016-novar
 
-        - procedure: filter_row
+        - procedure: filter
           ingredients:
               - unpop-datapoints-pop-by-global-age-gender-thousands-translated
           options:
-              filters:
+              row:
                   population:
                       variant: medium_variant
           result: unpop-datapoints-pop-by-global-age-gender-thousands-2015-and-after
