add back some indicators removed in c324078ffe86621
which are using only UN data

--- a/etl/recipes/pop_by_global_year.yml
+++ b/etl/recipes/pop_by_global_year.yml
@@ -11,7 +11,6 @@ info:
         - &gm_geo open-numbers/ddf--gapminder--geo_entity_domain
 
 config:
-    ddf_dir: /Users/semio/src/work/Gapminder/
     recipes_dir: ./
 
 ingredients:
@@ -301,6 +300,6 @@ cooking:
 
         - procedure: serve
           ingredients:
-              - *bridged
+              # - *bridged
               - *byage
               - *byagegender
