--- a/etl/recipes/pop_by_country_year.yml
+++ b/etl/recipes/pop_by_country_year.yml
@@ -10,7 +10,6 @@ info:
         - &gm_geo open-numbers/ddf--gapminder--geo_entity_domain
 
 config:
-    ddf_dir: /Users/semio/src/work/Gapminder/
     recipes_dir: ./
 
 ingredients:
@@ -153,38 +152,38 @@ cooking:
                   base: unpop-entities-country_code-aligned
                   key: country
                   value: country_gm
-          result: unpop-datapoints-pop-by-country-aligned
+          result: &pop-by-country unpop-datapoints-pop-by-country-aligned
 
 
-        # brige UN and Gapminder hostioric
-        - procedure: translate_header
-          ingredients:
-              - gmpop-datapoints-pop-aligned
-          options:
-              dictionary:
-                  area: country
-                  total_population_with_interpolations: population
-          result: gmpop-datapoints-pop-country
+        # # brige UN and Gapminder hostioric
+        # - procedure: translate_header
+        #   ingredients:
+        #       - gmpop-datapoints-pop-aligned
+        #   options:
+        #       dictionary:
+        #           area: country
+        #           total_population_with_interpolations: population
+        #   result: gmpop-datapoints-pop-country
 
-        - procedure: trend_bridge
-          ingredients:
-              - gmpop-datapoints-pop-country
-          options:
-              bridge_start:
-                  ingredient: gmpop-datapoints-pop-country
-                  column: population
-              bridge_end:
-                  ingredient: unpop-datapoints-pop-by-country-aligned
-                  column: population
-              bridge_on: year
-              bridge_length: 10
-              # debug: true
-          result: &bridged pop-country-bridged
+        # - procedure: trend_bridge
+        #   ingredients:
+        #       - gmpop-datapoints-pop-country
+        #   options:
+        #       bridge_start:
+        #           ingredient: gmpop-datapoints-pop-country
+        #           column: population
+        #       bridge_end:
+        #           ingredient: unpop-datapoints-pop-by-country-aligned
+        #           column: population
+        #       bridge_on: year
+        #       bridge_length: 10
+        #       # debug: true
+        #   result: &bridged pop-country-bridged
 
         # world_4region
         - procedure: translate_column
           ingredients:
-              - *bridged
+              - *pop-by-country
           options:
               column: country
               dictionary:
@@ -214,7 +213,7 @@ cooking:
         # world_6region
         - procedure: translate_column
           ingredients:
-              - *bridged
+              - *pop-by-country
           options:
               column: country
               dictionary:
@@ -243,7 +242,7 @@ cooking:
         # income_groups
         - procedure: translate_column
           ingredients:
-              - *bridged
+              - *pop-by-country
           options:
               column: country
               dictionary:
@@ -272,7 +271,7 @@ cooking:
         # landlocked
         - procedure: translate_column
           ingredients:
-              - *bridged
+              - *pop-by-country
           options:
               column: country
               dictionary:
@@ -302,7 +301,7 @@ cooking:
         # g77_and_oecd_countries
         - procedure: translate_column
           ingredients:
-              - *bridged
+              - *pop-by-country
           options:
               column: country
               dictionary:
@@ -331,7 +330,7 @@ cooking:
         # main_religion_2008
         - procedure: translate_column
           ingredients:
-              - *bridged
+              - *pop-by-country
           options:
               column: country
               dictionary:
@@ -359,7 +358,7 @@ cooking:
 
         - procedure: serve
           ingredients:
-              - *bridged
+              - *pop-by-country
               - *w4r
               - *w6r
               - *income_groups
