--- a/etl/recipes/pop_by_age_gender_country_year.yml
+++ b/etl/recipes/pop_by_age_gender_country_year.yml
@@ -25,6 +25,10 @@ ingredients:
       dataset: *un_pop
       key: country
       value: "*"
+    - id: gm-geo-synonym
+      dataset: *gm_geo
+      key: country, synonym
+      value: "*"
 
 cooking:
     datapoints:
@@ -104,12 +108,8 @@ cooking:
               column: name
               target_column: country_gm
               dictionary:
-                  base: gm-entities-country
-                  key: ['gapminder_list', 'alternative_1', 'alternative_2', 'alternative_3',
-                        'alternative_4_cdiac', 'pandg', 'god_id', 'alt_5', 'upper_case_name',
-                        'arb1', 'arb2', 'arb3', 'arb4', 'arb5', 'arb6', 'name', 'iso3166_1_alpha2',
-                        'iso3166_1_alpha3', 'iso3166_2'
-                        ]
+                  base: gm-geo-synonym
+                  key: synonym
                   value: country
           result: unpop-entities-country_code-aligned
 
