--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-input/allyear.xlsx
-input/pop some years 1800_2100.xlsx
-input/taiwan_source_uscensus.xlsx
-input/p-pop-country--v-20150821.xlsx
-input/previous/taiwan_source_uscensus.xlsx
+# exclude the source files
+etl/source/*
+*.bak
 
 # Tempfiles of OSX/Win
 Thumbs.db
