add back pop by global year
follow up 274978c96

--- a/etl/recipes/pop_by_global_year.yml
+++ b/etl/recipes/pop_by_global_year.yml
@@ -306,5 +306,6 @@ cooking:
         - procedure: serve
           ingredients:
               # - *bridged
+              - unpop-datapoints-pop-by-global-translated
               - *byage
               - *byagegender
