--- a/etl/recipes/pop_by_global_year.yml
+++ b/etl/recipes/pop_by_global_year.yml
@@ -6,42 +6,32 @@
 info:
     id: pop_by_global_year
     base:
-        - &gm_pop open-numbers/ddf--gapminder--population_historic
-        - &un_pop harpalshergill/ddf--unpop--wpp_population
+        - &un_pop working/ddf--unpop--wpp_population2019
         - &gm_geo open-numbers/ddf--gapminder--geo_entity_domain
 
 config:
     recipes_dir: ./
+    ddf_dir: /Users/semio/src/work/Gapminder/datasets/
 
 ingredients:
-    - id: gmpop-datapoints-pop
-      dataset: *gm_pop
-      key: area, year
-      value:
-          - total_population_with_interpolations
 
     - id: unpop-datapoints-pop-by-global
       dataset: *un_pop
-      key: global, variant, year
+      key: global, time
       value:
           - population
 
     - id: unpop-datapoints-pop-by-global-age
       dataset: *un_pop
-      key: global, variant, year, age1yearinterval
+      key: global, time, age1yearinterval
       value:
           - population
 
     - id: unpop-datapoints-pop-by-global-age-gender
       dataset: *un_pop
-      key: global, variant, year, age1yearinterval, gender
+      key: global, time, age1yearinterval, gender
       value:
           - population
-
-    - id: gm-geo-synonym
-      dataset: *gm_geo
-      key: country, synonym
-      value: "*"
 
 cooking:
     datapoints:
@@ -69,163 +59,38 @@ cooking:
                   population: population * 1000
           result: unpop-datapoints-pop-by-global-age-gender-thousands
 
-        - procedure: filter
+
+        # global pop by global
+        - procedure: translate_header
           ingredients:
               - unpop-datapoints-pop-by-global-thousands
           options:
-              row:
-                  population:
-                      variant: estimates
-          result: unpop-datapoints-pop-by-global-thousands-before-2016
+              dictionary:
+                  time: year
+          result: unpop-datapoints-pop-by-global-thousands-year
 
-        - procedure: groupby
-          ingredients:
-              - unpop-datapoints-pop-by-global-thousands-before-2016
-          options:
-              groupby:
-                  - global
-                  - year
-              aggregate:
-                  population: sum
-          result: unpop-datapoints-pop-by-global-thousands-before-2016-novar
-
-        - procedure: filter
-          ingredients:
-              - unpop-datapoints-pop-by-global-thousands
-          options:
-              row:
-                  population:
-                      variant: medium_variant
-          result: unpop-datapoints-pop-by-global-thousands-2015-and-after
-
-        - procedure: groupby
-          ingredients:
-              - unpop-datapoints-pop-by-global-thousands-2015-and-after
-          options:
-              groupby:
-                  - global
-                  - year
-              aggregate:
-                  population: sum
-          result: unpop-datapoints-pop-by-global-thousands-2015-and-after-novar
-
-        # 2015 has estimates and medium variant data, and we want to use estimates data.
-        # so we use deep merge to overwrite medium variant with estimates
-        - procedure: merge
-          ingredients:
-              - unpop-datapoints-pop-by-global-thousands-2015-and-after-novar
-              - unpop-datapoints-pop-by-global-thousands-before-2016-novar
-          options:
-              deep: true
-          result: unpop-datapoints-pop-by-global-deduplicated
-
-        # translate columns
         - procedure: translate_column
           ingredients:
-              - unpop-datapoints-pop-by-global-deduplicated
+              - unpop-datapoints-pop-by-global-thousands-year
           options:
               column: global
               dictionary:
                   '900': world
-          result: unpop-datapoints-pop-by-global-translated
+          result: &byglobal unpop-datapoints-pop-by-global-translated
 
-        # create global for gapminder
-        - procedure: groupby
-          ingredients:
-              - gmpop-datapoints-pop
-          options:
-              groupby: year
-              aggregate:
-                  total_population_with_interpolations: sum
-              insert_key:
-                  global: world
-          result: gmpop-datapoints-global
-        - procedure: translate_header
-          ingredients:
-              - gmpop-datapoints-global
-          options:
-              dictionary:
-                  total_population_with_interpolations: population
-          result: gmpop-datapoints-global-translated
-
-        # trend bridge
-        - procedure: trend_bridge
-          ingredients:
-              - gmpop-datapoints-global-translated
-          options:
-              bridge_start:
-                  ingredient: gmpop-datapoints-global-translated
-                  column: population
-              bridge_end:
-                  ingredient: unpop-datapoints-pop-by-global-translated
-                  column: population
-              bridge_on: year
-              bridge_length: 10
-          result: &bridged pop-global-bridged
-
-        # global pop by age and age-gender
+        # global pop by global, age
         - procedure: translate_header
           ingredients:
               - unpop-datapoints-pop-by-global-age-thousands
           options:
               dictionary:
                   age1yearinterval: age
+                  time: year
           result: unpop-datapoints-pop-by-global-age-thousands-translated
-        - procedure: filter
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-thousands-translated
-          options:
-              row:
-                  population:
-                      variant: estimates
-          result: unpop-datapoints-pop-by-global-age-thousands-before-2016
-
-        - procedure: groupby
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-thousands-before-2016
-          options:
-              groupby:
-                  - global
-                  - age
-                  - year
-              aggregate:
-                  population: sum
-          result: unpop-datapoints-pop-by-global-age-thousands-before-2016-novar
-
-        - procedure: filter
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-thousands-translated
-          options:
-              row:
-                  population:
-                      variant: medium_variant
-          result: unpop-datapoints-pop-by-global-age-thousands-2015-and-after
-
-        - procedure: groupby
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-thousands-2015-and-after
-          options:
-              groupby:
-                  - global
-                  - age
-                  - year
-              aggregate:
-                  population: sum
-          result: unpop-datapoints-pop-by-global-age-thousands-2015-and-after-novar
-
-        # 2015 has estimates and medium variant data, and we want to use estimates data.
-        # so we use deep merge to overwrite medium variant with estimates
-        - procedure: merge
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-thousands-2015-and-after-novar
-              - unpop-datapoints-pop-by-global-age-thousands-before-2016-novar
-          options:
-              deep: true
-          result: unpop-datapoints-pop-by-global-age-deduplicated
 
         - procedure: translate_column
           ingredients:
-              - unpop-datapoints-pop-by-global-age-deduplicated
+              - unpop-datapoints-pop-by-global-age-thousands-translated
           options:
               column: global
               dictionary:
@@ -239,64 +104,12 @@ cooking:
           options:
               dictionary:
                   age1yearinterval: age
+                  time: year
           result: unpop-datapoints-pop-by-global-age-gender-thousands-translated
-        - procedure: filter
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-gender-thousands-translated
-          options:
-              row:
-                  population:
-                      variant: estimates
-          result: unpop-datapoints-pop-by-global-age-gender-thousands-before-2016
-
-        - procedure: groupby
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-gender-thousands-before-2016
-          options:
-              groupby:
-                  - global
-                  - age
-                  - gender
-                  - year
-              aggregate:
-                  population: sum
-          result: unpop-datapoints-pop-by-global-age-gender-thousands-before-2016-novar
-
-        - procedure: filter
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-gender-thousands-translated
-          options:
-              row:
-                  population:
-                      variant: medium_variant
-          result: unpop-datapoints-pop-by-global-age-gender-thousands-2015-and-after
-
-        - procedure: groupby
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-gender-thousands-2015-and-after
-          options:
-              groupby:
-                  - global
-                  - age
-                  - gender
-                  - year
-              aggregate:
-                  population: sum
-          result: unpop-datapoints-pop-by-global-age-gender-thousands-2015-and-after-novar
-
-        # 2015 has estimates and medium variant data, and we want to use estimates data.
-        # so we use deep merge to overwrite medium variant with estimates
-        - procedure: merge
-          ingredients:
-              - unpop-datapoints-pop-by-global-age-gender-thousands-2015-and-after-novar
-              - unpop-datapoints-pop-by-global-age-gender-thousands-before-2016-novar
-          options:
-              deep: true
-          result: unpop-datapoints-pop-by-global-age-gender-deduplicated
 
         - procedure: translate_column
           ingredients:
-              - unpop-datapoints-pop-by-global-age-gender-deduplicated
+              - unpop-datapoints-pop-by-global-age-gender-thousands-translated
           options:
               column: global
               dictionary:
@@ -306,6 +119,6 @@ cooking:
         - procedure: serve
           ingredients:
               # - *bridged
-              - unpop-datapoints-pop-by-global-translated
+              - *byglobal
               - *byage
               - *byagegender
