--- a/etl/recipes/pop_by_age_country_year.yml
+++ b/etl/recipes/pop_by_age_country_year.yml
@@ -259,6 +259,10 @@ cooking:
           ingredients:
               - *final
           options:
+              custom_key_order:
+                  - country
+                  - age
+                  - year
               path: ddf--datapoints--population--by--country--age--year
               split_datapoints_by:
                   - country
@@ -266,8 +270,53 @@ cooking:
         - procedure: serve
           ingredients:
               - *w4r
+          options:
+              custom_key_order:
+                  - world_4region
+                  - age
+                  - year
+
+        - procedure: serve
+          ingredients:
               - *w6r
+          options:
+              custom_key_order:
+                  - world_6region
+                  - age
+                  - year
+
+        - procedure: serve
+          ingredients:
               - *income
+          options:
+              custom_key_order:
+                  - income_groups
+                  - age
+                  - year
+
+        - procedure: serve
+          ingredients:
               - *landlocked
+          options:
+              custom_key_order:
+                  - landlocked
+                  - age
+                  - year
+
+        - procedure: serve
+          ingredients:
               - *g77
+          options:
+              custom_key_order:
+                  - g77_and_oecd_countries
+                  - age
+                  - year
+
+        - procedure: serve
+          ingredients:
               - *religion
+          options:
+              custom_key_order:
+                  - main_religion_2008
+                  - age
+                  - year
