--- a/etl/recipes/pop_by_age_country_year.yml
+++ b/etl/recipes/pop_by_age_country_year.yml
@@ -24,7 +24,7 @@ ingredients:
 
     - id: gm-geo-synonym
       dataset: *gm_geo
-      key: geo, synonym
+      key: country, synonym
       value: "*"
     - id: gm-entities-country
       dataset: *gm_geo
@@ -60,7 +60,7 @@ cooking:
               dictionary:
                   base: gm-geo-synonym
                   key: synonym
-                  value: geo
+                  value: country
           result: unpop-entities-country_code-aligned
 
         - procedure: translate_column
