--- a/etl/recipes/pop_by_country_year.yml
+++ b/etl/recipes/pop_by_country_year.yml
@@ -40,7 +40,7 @@ ingredients:
 
     - id: gm-geo-synonym
       dataset: *gm_geo
-      key: geo, synonym
+      key: country, synonym
       value: "*"
 
 
@@ -82,7 +82,7 @@ cooking:
               dictionary:
                   base: gm-geo-synonym
                   key: synonym
-                  value: geo
+                  value: country
           result: unpop-entities-country_code-aligned
 
         # - procedure: translate_column
