--- a/etl/recipes/pop_by_age_country_year.yml
+++ b/etl/recipes/pop_by_age_country_year.yml
@@ -13,13 +13,13 @@ config:
 ingredients:
     - id: unpop-datapoints-pop-by-country-age
       dataset: *un_pop
-      key: age1yearinterval, country, time
+      key: age_group_1year, country_area, time
       value:
           - population
 
     - id: unpop-entities-country
       dataset: *un_pop
-      key: country
+      key: country_area
       value: "*"
 
     - id: gm-geo-synonym
@@ -45,7 +45,8 @@ cooking:
               - unpop-datapoints-pop-by-country-age-thousands
           options:
               dictionary:
-                  age1yearinterval: age
+                  age_group_1year: age
+                  country_area: country
                   time: year
           result: unpop-by-age-country-translated
 
@@ -70,7 +71,7 @@ cooking:
               column: country
               dictionary:
                   base: unpop-entities-country_code-aligned
-                  key: country
+                  key: country_area
                   value: country_gm
           result: &final unpop-datapoints-pop-by-country-age-aligned
 
