--- a/etl/recipes/pop_by_global_year.yml
+++ b/etl/recipes/pop_by_global_year.yml
@@ -16,19 +16,19 @@ ingredients:
 
     - id: unpop-datapoints-pop-by-global
       dataset: *un_pop
-      key: global, time
+      key: world, time
       value:
           - population
 
     - id: unpop-datapoints-pop-by-global-age
       dataset: *un_pop
-      key: global, time, age1yearinterval
+      key: world, time, age_group_1year
       value:
           - population
 
     - id: unpop-datapoints-pop-by-global-age-gender
       dataset: *un_pop
-      key: global, time, age1yearinterval, gender
+      key: world, time, age_group_1year, sex
       value:
           - population
 
@@ -65,6 +65,7 @@ cooking:
               - unpop-datapoints-pop-by-global-thousands
           options:
               dictionary:
+                  world: global
                   time: year
           result: unpop-datapoints-pop-by-global-thousands-year
 
@@ -83,7 +84,8 @@ cooking:
               - unpop-datapoints-pop-by-global-age-thousands
           options:
               dictionary:
-                  age1yearinterval: age
+                  age_group_1year: age
+                  world: global
                   time: year
           result: unpop-datapoints-pop-by-global-age-thousands-translated
 
@@ -102,7 +104,9 @@ cooking:
               - unpop-datapoints-pop-by-global-age-gender-thousands
           options:
               dictionary:
-                  age1yearinterval: age
+                  age_group_1year: age
+                  sex: gender
+                  world: global
                   time: year
           result: unpop-datapoints-pop-by-global-age-gender-thousands-translated
 
